# finalproj

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  app.py  deployment.yaml  entrypoint.sh  git.sh  prometheus.yml  service.yaml
.github/workflows/: cicd.yml
k8s/: kkk
src/: main.rs
